native/monogame/include/api_structs.h



struct MGG_DisplayMode
{
    MGSurfaceFormat format;
    mgint width;
    mgint height;
};


struct MGG_GraphicsAdaptor_Info
{
    void* DeviceName;
    void* Description;
    mgint DeviceId;
    mgint Revision;
    mgint VendorId;
    mgint SubSystemId;
    void* MonitorHandle;
    MGG_DisplayMode* DisplayModes;
    mgint DisplayModeCount;
    MGG_DisplayMode CurrentDisplayMode;
};


struct MGG_GraphicsDevice_Caps
{
    mgint MaxTextureSlots;
    mgint MaxVertexTextureSlots;
    mgint MaxVertexBufferSlots;
    mgint ShaderProfile;
};


struct Vector4
{
    mgfloat X;
    mgfloat Y;
    mgfloat Z;
    mgfloat W;
};


struct MGG_BlendState_Info
{
    MGBlend colorSourceBlend;
    MGBlend colorDestBlend;
    MGBlendFunction colorBlendFunc;
    MGBlend alphaSourceBlend;
    MGBlend alphaDestBlend;
    MGBlendFunction alphaBlendFunc;
    MGColorWriteChannels colorWriteChannels;
};


struct MGG_DepthStencilState_Info
{
    mgbool depthBufferEnable;
    mgbool depthBufferWriteEnable;
    MGCompareFunction depthBufferFunction;
    mgint referenceStencil;
    mgbool stencilEnable;
    mgint stencilMask;
    mgint stencilWriteMask;
    MGCompareFunction stencilFunction;
    MGStencilOperation stencilDepthBufferFail;
    MGStencilOperation stencilFail;
    MGStencilOperation stencilPass;
    mgbool twoSidedStencilMode;
    MGCompareFunction counterClockwiseStencilFunction;
    MGStencilOperation counterClockwiseStencilDepthBufferFail;
    MGStencilOperation counterClockwiseStencilFail;
    MGStencilOperation counterClockwiseStencilPass;
};


struct MGG_RasterizerState_Info
{
    MGFillMode fillMode;
    MGCullMode cullMode;
    mgbool scissorTestEnable;
    mgbool depthClipEnable;
    mgfloat depthBias;
    mgfloat slopeScaleDepthBias;
    mgbool multiSampleAntiAlias;
};


struct MGG_SamplerState_Info
{
    MGTextureAddressMode AddressU;
    MGTextureAddressMode AddressV;
    MGTextureAddressMode AddressW;
    mguint BorderColor;
    MGTextureFilter Filter;
    MGTextureFilterMode FilterMode;
    mgint MaximumAnisotropy;
    mgint MaxMipLevel;
    mgfloat MipMapLevelOfDetailBias;
    MGCompareFunction ComparisonFunction;
};


struct MGG_InputElement
{
    MGVertexElementUsage SemanticUsage;
    mguint SemanticIndex;
    mguint VertexBufferSlot;
    MGVertexElementFormat Format;
    mguint AlignedByteOffset;
    mguint InstanceDataStepRate;
};